# ARA_Mach_II

./: README.md  exploration.ipynb
asset_analyzer/: README.md  equipment_classifier.py  pyproject.toml  requirements.txt  test_classifier.py
asset_analyzer/data/raw/: Honolulu Airport HNL Work Order Data5.xlsx  equipment_classification_enhanced_results.xlsx  equipment_classification_improved_results.xlsx  equipment_classification_refined_results.xlsx  equipment_classification_results.xlsx  honolulu_equipment_classification_results_COMPARISON.xlsx  read_equipment_classes.py
asset_analyzer/notebooks/: exploration.ipynb
asset_analyzer/scripts/: generate_classifications.py  run_classification.py  show_equipment_classes.py  test_door_classification.py
asset_analyzer/src/: __init__.py
asset_analyzer/src/extractors/: _check_patterns.py  equipment.py
asset_analyzer/src/extractors/config/: base_equipment.json  class_mappings.json  industry_equipment.json
asset_analyzer/src/extractors/ml/: classifier.py
asset_analyzer/src/readers/: excel_reader.py
equipment_classifier/: APPLICATIONS.md  DOCUMENTATION_SUMMARY.md  Equipment Classes.xlsx  GETTING_STARTED.md  HOW_IT_WORKS.md  ONTARIO_TEST_ANALYSIS.md  OVERVIEW.md  Ontario_Facilities_Enhanced_SAMPLE_2000_20251025_172509.xlsx  README.md  claude_skill_example.py  demo.py  ontario_facilities_new_classifier_results.xlsx  process_full_ontario_data.py  pyproject.toml  test_enhanced_classifier.py  test_ontario_data.py  ~$Ontario_Facilities_Enhanced_FULL_20251025_174350.xlsx
equipment_classifier/.github/: copilot-instructions.md
equipment_classifier/src/equipment_classifier/: __init__.py  cli.py
equipment_classifier/src/equipment_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
equipment_classifier/src/equipment_classifier/core/: __init__.py  classifier.py  confidence.py
equipment_classifier/src/equipment_classifier/industry/: __init__.py  airport.py  airport_enhanced.py  airport_original.py  base.py  chemical.py  manufacturing.py  water.py
equipment_classifier/src/equipment_classifier/nlp/: __init__.py  context.py  patterns.py  tokenizer.py
equipment_classifier/src/equipment_classifier/utils/: validation.py
equipment_classifier/tests/: __init__.py  test_classifier.py
